--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
 <!-- home section ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <header>
-            <div class="logo">Cyber<span>Biz</span></div>
+            <img src="CBC-Logo.png" alt="CyberBiz Clinic Logo">
             <ul class="navlist">
                 <li><a href="#home" style="--i:1;">Home</a></li>
                 <li><a href="#about" style="--i:2;">About</a></li>
