--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <body>
 <!-- home section ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <header>
-            <img src="CBC-Logo.png" alt="CyberBiz Clinic Logo">
+	    <a href="your-logo.png" download>
+            	<img src="CBC-Logo.png" alt="CyberBiz Clinic Logo">
+            </a>		
             <ul class="navlist">
                 <li><a href="#home" style="--i:1;">Home</a></li>
                 <li><a href="#about" style="--i:2;">About</a></li>
