--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <body>
 <!-- home section ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <header>
-	    <a href="your-logo.png" download>
-            	<img src="CBC-Logo.png" alt="CyberBiz Clinic Logo">
-            </a>		
+            <img src="CBC-Logo.png" alt="CyberBiz Clinic Logo" id="logo">
             <ul class="navlist">
                 <li><a href="#home" style="--i:1;">Home</a></li>
                 <li><a href="#about" style="--i:2;">About</a></li>
@@ -160,7 +158,7 @@
 <!--about section----------------------------------------------------------------------------------------->
     <section id="about" class="about">
         <div class="img-about scroll-scale">
-            <img src="Aboutpage.png" alt="Sulaiman Ndamisa">
+            <img src="Aboutpage.png" alt="Sulaiman Ndamisa" >
             <div class="info-about1">
                 <span>5+</span>
                 <p>Years of Experience</p>
