--- a/index.html
+++ b/index.html
@@ -198,8 +198,23 @@
 
 	    <div class="service-box">
                 <i class='bx bxs-check-shield bx-tada service-icon'></i>
-                <h3>Security</h3>
-                <p>At CyberBiz Clinic, security is our first priority, our security services come in handy: Systems, Applications, Networks, Cloud, IoT and Critical Infrastructure.</p>
+                <h3>Cybersecurity Services.</h3>
+                <p>
+
+Security Audits and Assessments<br>
+Conduct comprehensive security assessments to identify vulnerabilities in your IT infrastructure.<br>
+
+Penetration Testing<br>
+Simulate cyber attacks to evaluate the security of your systems and networks.<br>
+
+Incident Response<br>
+Provide immediate support and solutions during and after a cyber attack.<br>
+
+Cybersecurity Training<br>
+Offer training programs for employees on best practices and how to recognize cyber threats.<br>
+
+Compliance Consulting<br>
+Help your business comply with data protection regulations and standards</p><br>
                 <div class="btn-box service-btn">
                     <a class="btn">Service Available</a>
                 </div>
