--- a/index.html
+++ b/index.html
@@ -199,24 +199,14 @@
 	    <div class="service-box">
                 <i class='bx bxs-check-shield bx-tada service-icon'></i>
                 <h3>Cybersecurity Services.</h3>
-                <p>
-
-Security Audits and Assessments<br>
-Conduct comprehensive security assessments to identify vulnerabilities in your IT infrastructure.<br>
-
-Penetration Testing<br>
-Simulate cyber attacks to evaluate the security of your systems and networks.<br>
-
-Incident Response<br>
-Provide immediate support and solutions during and after a cyber attack.<br>
-
-Cybersecurity Training<br>
-Offer training programs for employees on best practices and how to recognize cyber threats.<br>
-
-Compliance Consulting<br>
-Help your business comply with data protection regulations and standards</p><br>
+                <p>Security Audits and Assessments: Identify IT infrastructure vulnerabilities.<br>
+Penetration Testing: Simulate cyber attacks to test system security.<br>
+Incident Response: Provide immediate support during and after cyber attacks.<br>
+Cybersecurity Training: Train employees on recognizing and preventing cyber threats.<br>
+Compliance Consulting: Ensure compliance with data protection regulations.<br>
+		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Service Available</a>
+                    <a class="btn">Services are available</a>
                 </div>
             </div>
 		
