--- a/index.html
+++ b/index.html
@@ -198,12 +198,13 @@
 
 	    <div class="service-box">
                 <i class='bx bxs-check-shield bx-tada service-icon'></i>
-                <h3>Cybersecurity Services.</h3>
-                <p>Security Audits and Assessments: Identify IT infrastructure vulnerabilities.<br>
-Penetration Testing: Simulate cyber attacks to test system security.<br>
-Incident Response: Provide immediate support during and after cyber attacks.<br>
-Cybersecurity Training: Train employees on recognizing and preventing cyber threats.<br>
-Compliance Consulting: Ensure compliance with data protection regulations.<br>
+                <h3>Cybersecurity Solutions.</h3>
+                <p>
+Network Protection: Guard against unauthorized access.<br>
+Endpoint Security: Shield devices from threats.<br>
+Vulnerability Testing: Identify and fix security gaps.<br>
+Incident Response: Quick reaction to cyber incidents.<br>
+Threat Monitoring: Track and analyze potential risks.
 		</p>
                 <div class="btn-box service-btn">
                     <a class="btn">Services are available</a>
