--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
                 <i class='bx bxs-check-shield bx-tada service-icon'></i>
                 <h3>Cybersecurity Solutions.</h3>
                 <p>
-Network Protection: Guard against unauthorized access.<br>
-Endpoint Security: Shield devices from threats.<br>
-Vulnerability Testing: Identify and fix security gaps.<br>
-Incident Response: Quick reaction to cyber incidents.<br>
-Threat Monitoring: Track and analyze potential risks.
+<span>Network Protection:</span> Guard against unauthorized access.<br>
+<span>Endpoint Security:</span> Shield devices from threats.<br>
+<span>Vulnerability Testing:</span> Identify and fix security gaps.<br>
+<span>Incident Response:</span> Quick reaction to cyber incidents.<br>
+<span>Threat Monitoring:</span> Track and analyze potential risks.
 		</p>
                 <div class="btn-box service-btn">
                     <a class="btn">Services are available</a>
