--- a/index.html
+++ b/index.html
@@ -212,9 +212,14 @@
             </div>
 		
             <div class="service-box">
-                <i class='bx bxs-cog bx-spin service-icon'></i>
-                <h3>IT Support</h3>
-                <p>CyberBiz Clinic provides clients with all IT support related solution to remediate Critical IT Infrastructural problems.</p>
+                <i class='bx bxs-business'></i>
+                <h3>Business Consulting</h3>
+                <p>
+<span>Strategy Development:</span> Long-term business planning.<br>
+<span>Process Improvement:</span> Enhance efficiency and reduce costs.<br>
+<span>Market Research:</span> Analyze market trends.<br>
+<span>Financial Planning:</span> Budgeting and advisory.<br>
+<span>Operations Enhancement:</span> Optimize daily operations.</p>
                 <div class="btn-box service-btn">
                     <a class="btn">Service Available</a>
                 </div>
