--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </div>
 		
             <div class="service-box">
-		<i class='bx bxs-business bx-burst service-icon'></i>    
+		<i class='bx bxs-business bx-fade-down service-icon'></i>    
                 <h3>Business Consulting</h3>
                 <p>
 <span>Strategy Development:</span> Long-term business planning.<br>
