--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             </div>
 
             <div class="service-box">
-                <i class='bx bxl-apple bx-fade-up service-icon' ></i>
+                <i class='bx bxs-cog bx-fade-up service-icon' ></i>
                 <h3>Operating Systems (OS)</h3>
                 <p>Our Cyber Clinic is versatile at solving problems in most industry used Operating Systems in this ever evolving industry called Technology.</p>
                 <div class="btn-box service-btn">
