--- a/index.html
+++ b/index.html
@@ -221,16 +221,22 @@
 <span>Financial Planning:</span> Budgeting and advisory.<br>
 <span>Operations Enhancement:</span> Optimize daily operations.</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Service Available</a>
+                    <a class="btn">Services are available</a>
                 </div>
             </div>
 
             <div class="service-box">
                 <i class='bx bxs-cog bx-fade-up service-icon' ></i>
-                <h3>Operating Systems (OS)</h3>
-                <p>Our Cyber Clinic is versatile at solving problems in most industry used Operating Systems in this ever evolving industry called Technology.</p>
+                <h3>Managed IT Services.</h3>
+                <p>
+<span>IT Support:</span> 24/7 technical assistance.<br>
+<span>Cloud Management:</span> Cloud migration and services.<br>
+<span>Data Backup:</span> Ensure data integrity and recovery.<br>
+<span>Infrastructure Maintenance:</span> Optimize IT systems.<br>
+<span>Software Updates:</span> Regular maintenance and patches.
+		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Service Available</a>
+                    <a class="btn">Services are available</a>
                 </div>
             </div>
 
@@ -239,7 +245,7 @@
                 <h3>Web Development</h3>
                 <p>Branding is a key strategy that helps top companies to move up the ladder quicker. A website plays a huge role to achieve that. Our Clinic can provide you just that in time.</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Service Available</a>
+                    <a class="btn">Services are available</a>
                 </div>
             </div>
 
@@ -248,7 +254,7 @@
                 <h3>Computer Systems</h3>
                 <p>Computer systems are varied in solving different problems, our Cyber Clinic can help you select the appropriate systems for the right job of your operations.</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Service Available</a>
+                    <a class="btn">Services are available</a>
                 </div>
             </div>
 
