--- a/index.html
+++ b/index.html
@@ -241,18 +241,31 @@
             </div>
 
             <div class="service-box">
-                <i class='bx bx-code-alt bx-fade-right service-icon' ></i>
-                <h3>Web Development</h3>
-                <p>Branding is a key strategy that helps top companies to move up the ladder quicker. A website plays a huge role to achieve that. Our Clinic can provide you just that in time.</p>
+		<i class='bx ' ></i>    
+                <i class='bx bxs-store bx-flashing bx-flip-horizontal service-icon' ></i>
+                <h3>Digital Marketing</h3>
+                <p>
+<span>SEO Optimization:</span> Improve search rankings.<br>
+<span>Social Media:</span> Manage and grow online presence.<br>
+<span>Content Creation:</span> Develop engaging content.<br>
+<span>Email Campaigns:</span> Design and execute emails.<br>
+<span>PPC Management:</span> Pay-per-click advertising.
+		</p>
                 <div class="btn-box service-btn">
                     <a class="btn">Services are available</a>
                 </div>
             </div>
 
-            <div class="service-box">
-                <i class='bx bxs-devices bx-tada service-icon' ></i>
-                <h3>Computer Systems</h3>
-                <p>Computer systems are varied in solving different problems, our Cyber Clinic can help you select the appropriate systems for the right job of your operations.</p>
+            <div class="service-box">    
+                <i class='bx bx-cart bx-fade-left service-icon' ></i>
+                <h3>E-commerce Solutions.</h3>
+                <p>
+<span>Web Development:</span> Build e-commerce platforms.<br>
+<span>Payment Integration:</span> Secure payment processing.<br>
+<span>Inventory Control:</span> Streamline inventory management.<br>
+<span>CRM Systems:</span> Enhance customer relationships.<br>
+<span>Order Management:</span> Efficient processing and delivery.
+		</p>
                 <div class="btn-box service-btn">
                     <a class="btn">Services are available</a>
                 </div>
