--- a/index.html
+++ b/index.html
@@ -271,12 +271,18 @@
                 </div>
             </div>
 
-            <div class="service-box">
-                <i class='bx bx-code-curly bx-flashing service-icon' ></i>
-                <h3>Applications</h3>
-                <p>Applications are vital for modern business operations, our Cyber Clinic create all types of apps for different platforms like mobile, desktop and the web, we have got you covered.</p>
+            <div class="service-box">    
+                <i class='bx bx-tachometer bx-flashing service-icon' ></i>
+                <h3>Risk Management</h3>
+                <p>
+<span>Risk Assessment:</span> Evaluate potential risks.<br>
+<span>Impact Analysis:</span> Assess disruption effects.<br>
+<span>Disaster Recovery:</span> Plan for disaster response.<br>
+<span>Compliance:</span> Regulatory adherence.<br>
+<span>Continuity Planning:</span> Maintain business operations.
+		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Service Available</a>
+                    <a class="btn">Services are available</a>
                 </div>
             </div>
 
