--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
                 <i class='bx bxs-check-shield bx-tada service-icon'></i>
                 <h3>Cybersecurity Solutions.</h3>
                 <p>
-<span>Network Protection:</span> Guard against unauthorized access.<br>
-<span>Endpoint Security:</span> Shield devices from threats.<br>
-<span>Vulnerability Testing:</span> Identify and fix security gaps.<br>
-<span>Incident Response:</span> Quick reaction to cyber incidents.<br>
-<span>Threat Monitoring:</span> Track and analyze potential risks.
+		<span>Network Protection:</span> Guard against unauthorized access.<br>
+		<span>Endpoint Security:</span> Shield devices from threats.<br>
+		<span>Vulnerability Testing:</span> Identify and fix security gaps.<br>
+		<span>Incident Response:</span> Quick reaction to cyber incidents.<br>
+		<span>Threat Monitoring:</span> Track and analyze potential risks.
 		</p>
                 <div class="btn-box service-btn">
                     <a class="btn">Services are available</a>
@@ -215,11 +215,12 @@
 		<i class='bx bxs-business bx-fade-down service-icon'></i>    
                 <h3>Business Consulting</h3>
                 <p>
-<span>Strategy Development:</span> Long-term business planning.<br>
-<span>Process Improvement:</span> Enhance efficiency and reduce costs.<br>
-<span>Market Research:</span> Analyze market trends.<br>
-<span>Financial Planning:</span> Budgeting and advisory.<br>
-<span>Operations Enhancement:</span> Optimize daily operations.</p>
+		<span>Strategy Development:</span> Long-term business planning.<br>
+		<span>Process Improvement:</span> Enhance efficiency and reduce costs.<br>
+		<span>Market Research:</span> Analyze market trends.<br>
+		<span>Financial Planning:</span> Budgeting and advisory.<br>
+		<span>Operations Enhancement:</span> Optimize daily operations.
+		</p>
                 <div class="btn-box service-btn">
                     <a class="btn">Services are available</a>
                 </div>
@@ -229,11 +230,11 @@
                 <i class='bx bxs-cog bx-fade-up service-icon' ></i>
                 <h3>Managed IT Services.</h3>
                 <p>
-<span>IT Support:</span> 24/7 technical assistance.<br>
-<span>Cloud Management:</span> Cloud migration and services.<br>
-<span>Data Backup:</span> Ensure data integrity and recovery.<br>
-<span>Infrastructure Maintenance:</span> Optimize IT systems.<br>
-<span>Software Updates:</span> Regular maintenance and patches.
+		<span>IT Support:</span> 24/7 technical assistance.<br>
+		<span>Cloud Management:</span> Cloud migration and services.<br>
+		<span>Data Backup:</span> Ensure data integrity and recovery.<br>
+		<span>Infrastructure Maintenance:</span> Optimize IT systems.<br>
+		<span>Software Updates:</span> Regular maintenance and patches.
 		</p>
                 <div class="btn-box service-btn">
                     <a class="btn">Services are available</a>
@@ -245,11 +246,11 @@
                 <i class='bx bxs-store bx-flashing bx-flip-horizontal service-icon' ></i>
                 <h3>Digital Marketing</h3>
                 <p>
-<span>SEO Optimization:</span> Improve search rankings.<br>
-<span>Social Media:</span> Manage and grow online presence.<br>
-<span>Content Creation:</span> Develop engaging content.<br>
-<span>Email Campaigns:</span> Design and execute emails.<br>
-<span>PPC Management:</span> Pay-per-click advertising.
+		<span>SEO Optimization:</span> Improve search rankings.<br>
+		<span>Social Media:</span> Manage and grow online presence.<br>
+		<span>Content Creation:</span> Develop engaging content.<br>
+		<span>Email Campaigns:</span> Design and execute emails.<br>
+		<span>PPC Management:</span> Pay-per-click advertising.
 		</p>
                 <div class="btn-box service-btn">
                     <a class="btn">Services are available</a>
@@ -260,11 +261,11 @@
                 <i class='bx bx-cart bx-fade-left service-icon' ></i>
                 <h3>E-commerce Solutions.</h3>
                 <p>
-<span>Web Development:</span> Build e-commerce platforms.<br>
-<span>Payment Integration:</span> Secure payment processing.<br>
-<span>Inventory Control:</span> Streamline inventory management.<br>
-<span>CRM Systems:</span> Enhance customer relationships.<br>
-<span>Order Management:</span> Efficient processing and delivery.
+		<span>Web Development:</span> Build e-commerce platforms.<br>
+		<span>Payment Integration:</span> Secure payment processing.<br>
+		<span>Inventory Control:</span> Streamline inventory management.<br>
+		<span>CRM Systems:</span> Enhance customer relationships.<br>
+		<span>Order Management:</span> Efficient processing and delivery.
 		</p>
                 <div class="btn-box service-btn">
                     <a class="btn">Services are available</a>
@@ -275,21 +276,27 @@
                 <i class='bx bx-tachometer bx-flashing service-icon' ></i>
                 <h3>Risk Management</h3>
                 <p>
-<span>Risk Assessment:</span> Evaluate potential risks.<br>
-<span>Impact Analysis:</span> Assess disruption effects.<br>
-<span>Disaster Recovery:</span> Plan for disaster response.<br>
-<span>Compliance:</span> Regulatory adherence.<br>
-<span>Continuity Planning:</span> Maintain business operations.
+		<span>Risk Assessment:</span> Evaluate potential risks.<br>
+		<span>Impact Analysis:</span> Assess disruption effects.<br>
+		<span>Disaster Recovery:</span> Plan for disaster response.<br>
+		<span>Compliance:</span> Regulatory adherence.<br>
+		<span>Continuity Planning:</span> Maintain business operations.
 		</p>
                 <div class="btn-box service-btn">
                     <a class="btn">Services are available</a>
                 </div>
             </div>
 
-            <div class="service-box">
-                <i class='bx bx-wifi bx-spin service-icon' ></i>
-                <h3>Networks</h3>
-                <p>CyberBiz Clinic can provide its clients robust network services to share resources in a safe, secure and interconnected networking enviroment.</p>
+            <div class="service-box">   
+                <i class='bx bxs-cube bx-fade-down service-icon' ></i>
+                <h3Virtual CIO/CTO</h3>
+                <p>
+		<span>Tech Roadmap:</span> Align IT strategy with goals.
+		<span>IT Budgeting:</span> Plan technology investments.
+		<span>Vendor Management:</span> Handle technology vendors.
+		<span>IT Policies:</span> Establish governance.
+		<span>Innovation:</span> Foster technological growth.
+		</p>
                 <div class="btn-box service-btn">
                     <a class="btn">Service Available</a>
                 </div>
