--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
             <div class="service-box">   
                 <i class='bx bxs-cube bx-fade-down service-icon' ></i>
-                <h3Virtual CIO/CTO</h3>
+                <h3>Virtual CIO/CTO </h3>
                 <p>
 		<span>Tech Roadmap:</span> Align IT strategy with goals.
 		<span>IT Budgeting:</span> Plan technology investments.
