--- a/index.html
+++ b/index.html
@@ -298,25 +298,37 @@
 		<span>Innovation:</span>        Foster technological growth.
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Service Available</a>
+                    <a class="btn">Services are available</a>
                 </div>
             </div>
 
             <div class="service-box">
                 <i class='bx bx-data bx-tada service-icon' ></i>
-                <h3>Data Management</h3>
-                <p>Managing data with it's integrity for a long period of time on a confidential terms can be worrisome for most business, with CyberBiz Clinic the access to your database is always available.</p>
+                <h3>Data Analytics</h3>
+                <p>
+		<span>Data Warehousing:</span>      Centralize and store data.<br>
+		<span>Business Intelligence:</span> Data-driven decision making.<br>
+		<span>Predictive Analytics:</span>  Forecast trends and behaviors.<br>
+		<span>Data Visualization:</span>    Graphical data representation.<br>
+		<span>Big Data Solutions:</span>    Manage and analyze large datasets.<br>
+		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Service Available</a>
+                    <a class="btn">Services are available</a>
                 </div>
             </div>
 
             <div class="service-box">
                 <i class='bx bxs-cloud bx-flashing service-icon' ></i>
-                <h3>Cloud Integration</h3>
-                <p>Migrating a company resources to the cloud is a bit expensive but a fine thing to do, for your national and multinational company's resources to be moved to the cloud, CyberBiz Clinic helps with that amicably.</p>
+                <h3>Cloud Solutions</h3>
+                <p>
+		<span>Cloud Migration:</span> Seamless transition to cloud platforms.<br>
+		<span>Cloud Security:</span> Protect cloud data and applications.<br>
+		<span>Cloud Optimization:</span> Enhance cloud performance.<br>
+		<span>Disaster Recovery:</span> Cloud-based recovery solutions.<br>
+		<span>Hybrid Cloud:</span> Integrate on-premise and cloud systems.	
+		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Service Available</a>
+                    <a class="btn">Services are available</a>
                 </div>
             </div>
 
