--- a/index.html
+++ b/index.html
@@ -333,11 +333,17 @@
             </div>
 
             <div class="service-box">
-                <i class='bx bxs-briefcase bx-fade-down service-icon' ></i>
-                <h3>Project Management</h3>
-                <p>Projects can make a whole lot of sense when pulled of by the right manager. Our Clinic can coordinate a team of professionals with a dedicated amount of resources to succesfully achieve a given task within an agreed parameters.</p>
+                <i class='bx bx-brain bx-tada service-icon' ></i>
+                <h3>Artificial Intelligence.</h3>
+                <p>
+		<span>AI Strategy:</span> Integrate AI into business processes.<br>
+		<span>Machine Learning:</span> Develop predictive models.<br>
+		<span>AI Solutions:</span> Custom AI applications.<br>
+		<span>AI Optimization:</span> Improve AI system performance.<br>
+		<span>Data Science:</span> Advanced analytics and insights.
+		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Service Available</a>
+                    <a class="btn">Services are available</a>
                 </div>
             </div>
 
