--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
                 <i class='bx bxs-check-shield bx-tada service-icon'></i>
                 <h3>Cybersecurity Solutions.</h3>
                 <p>
-		<span>Network Protection:</span>    Guard against unauthorized access.<br>
-		<span>Endpoint Security:</span>     Shield devices from threats.<br>
-		<span>Vulnerability Testing:</span> Identify and fix security gaps.<br>
-		<span>Incident Response:</span>     Quick reaction to cyber incidents.<br>
+		<span>Network Security:</span>      Protect against breaches.<br>
+		<span>Device Protection: </span>    Secure endpoints.<br>
+		<span>Threat Detection:</span>      Identify vulnerabilities.<br>
+		<span>Incident Response:</span>     Quick reaction to cyber attacks.<br>
 		<span>Threat Monitoring:</span>     Track and analyze potential risks.
 		</p>
                 <div class="btn-box service-btn">
