--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 	    <div class="service-box">
                 <i class='bx bxs-check-shield bx-tada service-icon'></i>
-                <h3>Cybersecurity Solutions.</h3>
+                <h3>Cybersecurity Solutions</h3>
                 <p>
 		<span>Network Security:</span>      Protect against breaches.<br>
 		<span>Device Protection: </span>    Secure endpoints.<br>
@@ -228,7 +228,7 @@
 
             <div class="service-box">
                 <i class='bx bxs-cog bx-fade-up service-icon' ></i>
-                <h3>Managed IT Services.</h3>
+                <h3>Managed IT Services</h3>
                 <p>
 		<span>IT Support:</span>                 24/7 technical assistance.<br>
 		<span>Cloud Management:</span>           Cloud migration and services.<br>
@@ -259,7 +259,7 @@
 
             <div class="service-box">    
                 <i class='bx bx-cart bx-fade-left service-icon' ></i>
-                <h3>E-commerce Solutions.</h3>
+                <h3>E-commerce Solutions</h3>
                 <p>
 		<span>Web Development:</span>     Build e-commerce platforms.<br>
 		<span>Payment Integration:</span> Secure payment processing.<br>
@@ -334,7 +334,7 @@
 
             <div class="service-box">
                 <i class='bx bx-brain bx-tada service-icon' ></i>
-                <h3>Artificial Intelligence.</h3>
+                <h3>Artificial Intelligence</h3>
                 <p>
 		<span>AI Strategy:</span> Integrate AI into business processes.<br>
 		<span>Machine Learning:</span> Develop predictive models.<br>
