--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name='viewport' content='width=device-width, initial-scale=1.0'>
         <link rel='stylesheet' href="style.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link href="favicon.png" rel="icon">
+  	<link href="apple-touch-icon.png" rel="apple-touch-icon">    
     </head>
     <body>
 <!-- home section ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
