--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <img src="Homepage.png" alt="Sulaiman Ndamisa">
                 </div>
         
-                <--!<div class="liquid-shape">
+                <!--<div class="liquid-shape">
                     <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" id="blobSvg">
                     <path fill="#12f7ff">
                         <animate attributeName="d"
@@ -112,7 +112,7 @@
                     </svg>
                 </div>-->
         
-                <--!<div class="liquid-shape">
+                <!--<div class="liquid-shape">
                     <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" id="blobSvg">
                     <path fill="#12f7ff">
                         <animate attributeName="d"
