--- a/index.html
+++ b/index.html
@@ -27,9 +27,20 @@
 
         <section id="home" class="home">
             <div class="home-content scroll-scale">
-                <h1>Hi, I'm Sulaiman Ndamisa!</h1>
+                <h1>Welcome to Cyber Biz Clinic!
+		</h1>
                 <div class="change-text">
-                    <h3>And I'm </h3>
+                    <h3>At Cyber B's Clinic, we empower businesses with cutting-edge tech solutions. Our expert team is dedicated to helping you succeed in the digital world.
+
+Why Choose Us?
+
+- Expertise:Skilled professionals.
+- Innovation: Latest technologies.
+- Personalized Service:Tailored solutions.
+
+Join us and let's achieve your business goals together!
+
+Contact Us Today!</h3>
                     <h3>
                         <span class="word">an&nbspI.T&nbspSpecialist</span>
                         <span class="word">a&nbspWeb&nbspDeveloper</span>
