--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@ Why Choose Us?
 - Expertise:Skilled professionals.
 - Innovation: Latest technologies.
 - Personalized Service:Tailored solutions.
-
-Join us and let's achieve your business goals together!
-
-Contact Us Today!</h3>
+		    </h3>
                     <h3>
                         <span class="word">an&nbspI.T&nbspSpecialist</span>
                         <span class="word">a&nbspWeb&nbspDeveloper</span>
@@ -50,7 +47,8 @@ Contact Us Today!</h3>
                     </h3>
                 </div>
         
-                <p>I have been in this evolving industry for about half a decade solving critical problems for clients with all size of businesses.</p>
+                <p>Join us and let's achieve your business goals together</p>
+		<p>Contact us today!</p>
         
                 <div class="info-box">
                     <div class="email-info">
