--- a/index.html
+++ b/index.html
@@ -27,24 +27,17 @@
 
         <section id="home" class="home">
             <div class="home-content scroll-scale">
-                <h1>Welcome to Cyber Biz Clinic!
-		</h1>
+                <h2>Welcome to CyberBiz Clinic!</h2>
                 <div class="change-text">
-                    <h3>At Cyber B's Clinic, we empower businesses with cutting-edge tech solutions. Our expert team is dedicated to helping you succeed in the digital world.
+                    <h3>At CyberBiz Clinic, we empower businesses with cutting-edge tech solutions. Our expert team is dedicated to helping you succeed in the digital world.
 
-Why Choose Us?
+Why Choose Us?<br>
 
-- Expertise:Skilled professionals.
-- Innovation: Latest technologies.
-- Personalized Service:Tailored solutions.
+- Expertise:Skilled professionals.<br>
+- Innovation: Latest technologies.<br>
+- Personalized Service:Tailored solutions.<br>
 		    </h3>
-                    <h3>
-                        <span class="word">an&nbspI.T&nbspSpecialist</span>
-                        <span class="word">a&nbspWeb&nbspDeveloper</span>
-                        <span class="word">a&nbspNetwork&nbspEngineer</span>
-                        <span class="word">a&nbspCybersecurity&nbspConsultant</span>
-                        <span class="word">a&nbspProject&nbspManager</span>
-                    </h3>
+
                 </div>
         
                 <p>Join us and let's achieve your business goals together</p>
