--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
         <section id="home" class="home">
             <div class="home-content scroll-scale">
-                <h1>Hi, I'm Sulaiman Ndamisa!</h1>
+                <h1>Welcome to CyberBiz Clinic</h1>
                 <div class="change-text">
-                    <h3>And I'm </h3>
+                    <h3>We offer </h3>
                     <h3>
-                        <span class="word">an&nbspI.T&nbspSpecialist</span>
-                        <span class="word">a&nbspWeb&nbspDeveloper</span>
+                        <span class="word">an&nbspCybersecurity&nbspAssessments</span>
+                        <span class="word">a&nbspNetwork&nbsp&&nbspMobile-Security&nbspSolutions</span>
                         <span class="word">a&nbspNetwork&nbspEngineer</span>
                         <span class="word">a&nbspCybersecurity&nbspConsultant</span>
                         <span class="word">a&nbspProject&nbspManager</span>
