--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
                 <div class="change-text">
                     <h3>We offer </h3>
                     <h3>
-                        <span class="word">an&nbspCybersecurity&nbspAssessments</span>
-                        <span class="word">a&nbspNetwork&nbsp&&nbspMobile-Security&nbspSolutions</span>
-                        <span class="word">a&nbspNetwork&nbspEngineer</span>
-                        <span class="word">a&nbspCybersecurity&nbspConsultant</span>
-                        <span class="word">a&nbspProject&nbspManager</span>
+                        <span class="word">Cybersecurity&nbspAssessments</span>
+                        <span class="word">Network-Security&nbspSolutions</span>
+                        <span class="word">Mobile-Security&nbspSolutions</span>
+                        <span class="word">E-commerce&nbspOptimization</span>
+                        <span class="word">Website&nbspDevelopment</span>
+			<span class="word">Project&nbspManagement</span>  
+			<span class="word">Business&nbspConsulting</span>
+			<span class="word">Cybersecurity&nbspTraining</span>    
                     </h3>
                 </div>
         
