--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
                     </h3>
                 </div>
         
-                <p>I have been in this evolving industry for about half a decade solving critical problems for clients with all size of businesses.</p>
+                <p>“Choose <span>CyberBiz Clinic</span>: Where Cybersecurity Meets Business Excellence!”<br>
+		At <span>CyberBiz Clinic</span>, we don’t just protect your digital assets; we empower your business to thrive in the digital age. Our name says it all
+		</p>
+		<p><span>Cyber</span>: Cutting-edge cybersecurity solutions tailored to your unique needs.<br>
+                   <span>Biz</span>: Business-focused strategies that drive growth and efficiency.<br>
+                   <span>Clinic</span>: Expert care and support, ensuring your systems are healthy and secure.<br>
+		</p>    
         
                 <div class="info-box">
                     <div class="email-info">
