--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
                     </h3>
                 </div>
         
-                <p>“Choose <span>CyberBiz Clinic</span>: Where Cybersecurity Meets Business Excellence!”<br>
-		At <span>CyberBiz Clinic</span>, we don’t just protect your digital assets; we empower your business to thrive in the digital age. Our name says it all
-		</p>
+                <h4>“Choose <span>CyberBiz Clinic</span>: Where Cybersecurity Meets Business Excellence!”</h4><br>
+		<h5>At <span>CyberBiz Clinic</span>, we don’t just protect your digital assets; we empower your business to thrive in the digital age. Our name says it all</h5>		
 		<p><span>Cyber</span>: Cutting-edge cybersecurity solutions tailored to your unique needs.<br>
                    <span>Biz</span>: Business-focused strategies that drive growth and efficiency.<br>
                    <span>Clinic</span>: Expert care and support, ensuring your systems are healthy and secure.<br>
