--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
                 <div class="info-box">
                     <div class="email-info">
                         <h5>Email :</h5>
-                        <span>sndamisa23@gmail.com</span>
+                        <span>cyberbizclinic@gmail.com</span>
                     </div>
                     <div class="whatsapp-info">
-                        <h5>Whatsapp :</h5>
-                        <span>+23277654955</span>
+                        <h5>Whatsapp / Call :</h5>
+                        <span>+232 77-654-955 / 72-282-292</span>
                     </div>
                 </div>
         
                 <div class="btn-box">
-		    <a href="CV.pdf" class="btn" download="CV_Sulaiman_Ndamisa" target=" balnk">Download</a>
-		    <a href="mailto:cyberbizclinic@gmail.com" class="btn">Hire Me Now!</a>
+		    <a href="CV.pdf" class="btn" download="CV_Sulaiman_Ndamisa" target=" balnk">Download Brochure</a>
+		    <a href="mailto:cyberbizclinic@gmail.com" class="btn">Hire us Now!</a>
                 </div>
         
                 <div class="social-icons">
