--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                         <span>cyberbizclinic@gmail.com</span>
                     </div>
                     <div class="whatsapp-info">
-                        <h5>Whatsapp / Call :</h5>
-                        <span>+232 77-654-955 / 72-282-292</span>
+                        <h5>Whatsapp:</h5>
+                        <span>+232 77-654-955</span>
                     </div>
                 </div>
         
                 <div class="btn-box">
-		    <a href="CV.pdf" class="btn" download="CV_Sulaiman_Ndamisa" target=" balnk">Download Brochure</a>
+		    <a href="CV.pdf" class="btn" download="CV_Sulaiman_Ndamisa" target=" balnk">Get Brochure</a>
 		    <a href="mailto:cyberbizclinic@gmail.com" class="btn">Hire us Now!</a>
                 </div>
         
