--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="info-box">
                     <div class="email-info">
                         <h5>Email :</h5>
-                        <span>cyberbizclinic@gmail.com</span>
+                        <span>cbc.sl@gmail.com</span>
                     </div>
                     <div class="whatsapp-info">
                         <h5>Whatsapp:</h5>
