--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
         </div>
 
         <div class="about-content scroll-scale">
-            <span>Let me introduce myself</span>
-            <h2>About Me</h2>
+            <span>Explore</span>
+            <h2>About Us</h2>
             <h3>A short good story</h3>
             <p>CyberBiz is an enthusiastic problem solving machine. 
                For all your subtle and critical I.T Infrastructural problems, we are here, always ever ready to help mitigate and solve them. 
