--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
         </div>
 
         <div class="about-content scroll-scale">
-            <span>Explore</span>
-            <h2>About Us</h2>
+            <span>About Us</span>
+            <h2>Welcome to CyberBiz Clinic! 🌐</h2>
             <h3>A short good story</h3>
-            <p>CyberBiz is an enthusiastic problem solving machine. 
-               For all your subtle and critical I.T Infrastructural problems, we are here, always ever ready to help mitigate and solve them. 
-            </p>
+            <p>At CyberBiz Clinic, we specialize in providing a full spectrum of IT services, with a strong emphasis on cybersecurity and business solutions. Our mission is to safeguard your digital assets and ensure your business operates smoothly in today’s fast-paced, technology-driven world.
+
+</p>
 
             <div class="btn-box">
                 <a class="btn">CyberBiz!</a>
