--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
 
         <div class="about-content scroll-scale">
             <span>About Us</span>
-            <h2>Welcome to CyberBiz Clinic! 🌐</h2>
-            <h3>A short good story</h3>
+            <h3>Welcome to CyberBiz Clinic! 🌐</h3>   
             <p>At CyberBiz Clinic, we specialize in providing a full spectrum of IT services, with a strong emphasis on cybersecurity and business solutions. Our mission is to safeguard your digital assets and ensure your business operates smoothly in today’s fast-paced, technology-driven world.
 
-</p>
+	    </p>
+	    <h3>Who we are</h3>	
 
             <div class="btn-box">
                 <a class="btn">CyberBiz!</a>
