--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
 	    <h3>Our Mission</h3>
 	    <p>To deliver exceptional IT and cybersecurity services that protect and enhance our clients’ businesses, ensuring their success in the digital age.</p>
 	    <h3>Our Plan</h3>
-	    <p>
-    Innovation: Continuously develop and implement cutting-edge technology solutions to meet the evolving needs of our clients.<br>
-    Customer Focus: Maintain a customer-centric approach, ensuring that our services are tailored to the specific requirements of each business.<br>
-    Growth: Expand our service offerings and reach to support more businesses globally.<br>
-    Excellence: Uphold the highest standards of quality and professionalism in all our services.
-            </p>	
+	  <ul style="list-style-type: square;">
+	    <li>Innovation: Continuously develop and implement cutting-edge technology solutions to meet the evolving needs of our clients.</li>
+	    <li>Customer Focus: Maintain a customer-centric approach, ensuring that our services are tailored to the specific requirements of each business.</li>
+	    <li>Growth: Expand our service offerings and reach to support more businesses globally.</li>
+            <li>Excellence: Uphold the highest standards of quality and professionalism in all our services.</li>		  
+	  </ul>
             <div class="btn-box">
                 <a class="btn">CyberBiz!</a>
             </div>
