--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </div>
 
         <div class="about-content scroll-scale">
-            <span>About Us</span>
+            <span><h2>About Us</2></span>
             <h3>Welcome to CyberBiz Clinic! 🌐</h3>   
             <p>At CyberBiz Clinic, we specialize in providing a full spectrum of IT services, with a strong emphasis on cybersecurity and business solutions. Our mission is to safeguard your digital assets and ensure your business operates smoothly in today’s fast-paced, technology-driven world.
 
