--- a/index.html
+++ b/index.html
@@ -184,23 +184,23 @@
 
         <div class="about-content scroll-scale">
             <span><h2>About Us</2></span>
-            <h3>Welcome to <span>CyberBiz Clinic!</span> 🌐</h3>   
-            <p>At <span>CyberBiz Clinic</span>, we specialize in providing a full spectrum of IT services, with a strong emphasis on cybersecurity and business solutions. Our mission is to safeguard your digital assets and ensure your business operates smoothly in today’s fast-paced, technology-driven world.
+            <span><h3>Welcome to CyberBiz Clinic! 🌐</h3></span>   
+            <p>At CyberBiz Clinic, we specialize in providing a full spectrum of IT services, with a strong emphasis on cybersecurity and business solutions. Our mission is to safeguard your digital assets and ensure your business operates smoothly in today’s fast-paced, technology-driven world.
 
 	    </p>
-	    <span><h3>Who We Are</h3></span>
+	    <h3>Who We Are</h3>
 	    <p>Founded by a team of passionate IT and cybersecurity experts, <span>CyberBiz Clinic</span> is dedicated to protecting and enhancing your business through innovative technology solutions. We understand the unique challenges faced by businesses in the digital age and are committed to delivering top-notch services that are both effective and affordable.</p>	
-	    <span><h3>Our Vision</h3></span>
+	    <h3>Our Vision</h3>
 	    <p>To be the leading provider of innovative IT and cybersecurity solutions, empowering businesses to thrive in a secure digital environment.</p>	
-	    <span><h3>Our Mission</h3></span>
+	    <h3>Our Mission</h3>
 	    <p>To deliver exceptional IT and cybersecurity services that protect and enhance our clients’ businesses, ensuring their success in the digital age.</p>
-	    <span><h3>Our Plan</h3></span>
-	  <ul style="list-style-type: square;">
-	    <li><span>Innovation</span>: Continuously develop and implement cutting-edge technology solutions to meet the evolving needs of our clients.</li>
-	    <li><span>Customer Focus</span>: Maintain a customer-centric approach, ensuring that our services are tailored to the specific requirements of each business.</li>
-	    <li><span>Growth</span>: Expand our service offerings and reach to support more businesses globally.</li>
-            <li><span>Excellence</span>: Uphold the highest standards of quality and professionalism in all our services.</li>		  
-	  </ul>
+	    <h3>Our Plan</h3>
+	    <ul style="list-style-type: square;">
+	      <li>Innovation: Continuously develop and implement cutting-edge technology solutions to meet the evolving needs of our clients.</li>
+	      <li>Customer Focus: Maintain a customer-centric approach, ensuring that our services are tailored to the specific requirements of each business.</li>
+	      <li>Growth: Expand our service offerings and reach to support more businesses globally.</li>
+              <li>Excellence: Uphold the highest standards of quality and professionalism in all our services.</li>		  
+	    </ul>
             <div class="btn-box">
                 <a class="btn">CyberBiz!</a>
             </div>
