--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 	    </p>
 	    <h3>Who We Are</h3>
-	    <p>Founded by a team of passionate IT and cybersecurity experts, <span>CyberBiz Clinic</span> is dedicated to protecting and enhancing your business through innovative technology solutions. We understand the unique challenges faced by businesses in the digital age and are committed to delivering top-notch services that are both effective and affordable.</p>	
+	    <p>Founded by a team of passionate IT and cybersecurity experts, CyberBiz Clinic is dedicated to protecting and enhancing your business through innovative technology solutions. We understand the unique challenges faced by businesses in the digital age and are committed to delivering top-notch services that are both effective and affordable.</p>	
 	    <h3>Our Vision</h3>
 	    <p>To be the leading provider of innovative IT and cybersecurity solutions, empowering businesses to thrive in a secure digital environment.</p>	
 	    <h3>Our Mission</h3>
