--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <span><h2>About Us</2></span>
 	    <h2>Welcome to CyberBiz Clinic!🌐</h2>	 
             <p>At CyberBiz Clinic, we specialize in providing a full spectrum of IT services, with a strong emphasis on cybersecurity and business solutions. Our mission is to safeguard your digital assets and ensure your business operates smoothly in today’s fast-paced, technology-driven world.</p>
-	    <h3>Who We Are</h3>
+	    <span>Who We Are</span>
 	    <p>Founded by a team of passionate IT and cybersecurity experts, CyberBiz Clinic is dedicated to protecting and enhancing your business through innovative technology solutions. We understand the unique challenges faced by businesses in the digital age and are committed to delivering top-notch services that are both effective and affordable.</p>	
 	    <h3>Our Vision</h3>
 	    <p>To be the leading provider of innovative IT and cybersecurity solutions, empowering businesses to thrive in a secure digital environment.</p>	
