--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
 	    <span>Our Mission</span>
 	    <p>To deliver exceptional IT and cybersecurity services that protect and enhance our clients’ businesses, ensuring their success in the digital age.</p>
 	    <span>Our Plan</span>
-	    <ul>
-	      <li><span>Innovation:</span> Continuously develop and implement cutting-edge technology solutions to meet the evolving needs of our clients.</li>
-	      <li><span>Customer Focus:</span> Maintain a customer-centric approach, ensuring that our services are tailored to the specific requirements of each business.</li>
-	      <li><span>Growth:</span> Expand our service offerings and reach to support more businesses globally.</li>
-              <li><span>Excellence:</span> Uphold the highest standards of quality and professionalism in all our services.</li>		  
-	    </ul>
+	    <p>
+	        <span>Innovation</span>: Continuously develop and implement cutting-edge technology solutions to meet the evolving needs of our clients.<br>
+                <span>Customer Focus</span>: Maintain a customer-centric approach, ensuring that our services are tailored to the specific requirements of each business.<br>
+                <span>Growth</span>: Expand our service offerings and reach to support more businesses globally.<br>
+		<span>Excellence</span>: Uphold the highest standards of quality and professionalism in all our services.<br> 
+	    </p>  	
             <div class="btn-box">
                 <a class="btn">CyberBiz!</a>
             </div>
