--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
 	    <p>To deliver exceptional IT and cybersecurity services that protect and enhance our clients’ businesses, ensuring their success in the digital age.</p>
 	    <h3>Our Plan</h3>
 	    <p>
-	        <span>Innovation</span>: Continuously develop and implement cutting-edge technology solutions to meet the evolving needs of our clients.<br>
-                <span>Customer Focus</span>: Maintain a customer-centric approach, ensuring that our services are tailored to the specific requirements of each business.<br>
-                <span>Growth</span>: Expand our service offerings and reach to support more businesses globally.<br>
-		<span>Excellence</span>: Uphold the highest standards of quality and professionalism in all our services.<br> 
+	        <h5>Innovation</h5>: Continuously develop and implement cutting-edge technology solutions to meet the evolving needs of our clients.<br>
+                <h5>Customer Focus</h5>: Maintain a customer-centric approach, ensuring that our services are tailored to the specific requirements of each business.<br>
+                <h5>Growth</h5>: Expand our service offerings and reach to support more businesses globally.<br>
+		<h5>Excellence</h5>: Uphold the highest standards of quality and professionalism in all our services.<br> 
 	    </p>  	
             <div class="btn-box">
                 <a class="btn">CyberBiz!</a>
