--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 		<h4>Excellence</h4>: Uphold the highest standards of quality and professionalism in all our services.<br> 
 	    </p>  	
             <div class="btn-box">
-                <a class="btn">CyberBiz!</a>
+                <a href="#services" class="btn">Explore</a>
             </div>
         </div>
     </section>
