--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 		<span>Threat Monitoring:</span>     Track and analyze potential risks.
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Services are available</a>
+                    <a class="btn">Services inquiry</a>
                 </div>
             </div>
 		
@@ -240,7 +240,7 @@
 		<span>Operations Enhancement:</span> Optimize daily operations.
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Services are available</a>
+                    <a class="btn">Services inquiry</a>
                 </div>
             </div>
 
@@ -255,7 +255,7 @@
 		<span>Software Updates:</span>           Regular maintenance and patches.
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Services are available</a>
+                    <a class="btn">Services inquiry</a>
                 </div>
             </div>
 
