--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 		<span>Threat Monitoring:</span>     Track and analyze potential risks.
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Services inquiry</a>
+		    <a href="mailto:cyberbizclinic@gmail.com" class="btn">Services inquiry</a>	
                 </div>
             </div>
 		
@@ -240,7 +240,7 @@
 		<span>Operations Enhancement:</span> Optimize daily operations.
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Services inquiry</a>
+                    <a href="mailto:cyberbizclinic@gmail.com" class="btn">Services inquiry</a>
                 </div>
             </div>
 
@@ -255,7 +255,7 @@
 		<span>Software Updates:</span>           Regular maintenance and patches.
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Services inquiry</a>
+                    <a href="mailto:cyberbizclinic@gmail.com" class="btn">Services inquiry</a>
                 </div>
             </div>
 
@@ -271,7 +271,7 @@
 		<span>PPC Management:</span>   Pay-per-click advertising.
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Services inquiry</a>
+                    <a href="mailto:cyberbizclinic@gmail.com" class="btn">Services inquiry</a>
                 </div>
             </div>
 
@@ -286,7 +286,7 @@
 		<span>Order Management:</span>    Efficient processing and delivery.
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Services inquiry</a>
+                    <a href="mailto:cyberbizclinic@gmail.com" class="btn">Services inquiry</a>
                 </div>
             </div>
 
@@ -301,7 +301,7 @@
 		<span>Continuity Planning:</span> Maintain business operations.
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Services inquiry</a>
+                    <a href="mailto:cyberbizclinic@gmail.com" class="btn">Services inquiry</a>
                 </div>
             </div>
 
@@ -316,7 +316,7 @@
 		<span>Innovation:</span>        Foster technological growth.
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Services inquiry</a>
+                    <a href="mailto:cyberbizclinic@gmail.com" class="btn">Services inquiry</a>
                 </div>
             </div>
 
@@ -331,7 +331,7 @@
 		<span>Big Data Solutions:</span>    Manage and analyze large datasets.<br>
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Services inquiry</a>
+                    <a href="mailto:cyberbizclinic@gmail.com" class="btn">Services inquiry</a>
                 </div>
             </div>
 
@@ -346,7 +346,7 @@
 		<span>Hybrid Cloud:</span> Integrate on-premise and cloud systems.	
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Services inquiry</a>
+                    <a href="mailto:cyberbizclinic@gmail.com" class="btn">Services inquiry</a>
                 </div>
             </div>
 
@@ -361,7 +361,7 @@
 		<span>Data Science:</span> Advanced analytics and insights.
 		</p>
                 <div class="btn-box service-btn">
-                    <a class="btn">Services inquiry</a>
+                    <a href="mailto:cyberbizclinic@gmail.com" class="btn">Services inquiry</a>
                 </div>
             </div>
 
