--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 	    <div class="service-box">
                 <i class='bx bxs-check-shield bx-tada service-icon'></i>
-                <h3>Cybersecurity</h3>
+                <h3>Cybersecurity Solutions</h3>
                 <p>
 		<span>Network Security:</span>      Protect against breaches.<br>
 		<span>Device Protection: </span>    Secure endpoints.<br>
