--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
 <!-- skills section -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
     <section id="skills" class="skills">
         <div class="main-text scroll-scale">
-            <span>Technical and Professional</span>
-            <h2>My Skills</h2>
+            <span>To succeed in any TECH project, there are two set of skills to posses, they are Technical and Professional Skills.</span>
+            <h2>Here are some of our Skills-set range</h2>
         </div>
         
         <div class="skill-main ">
