--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                         <div class="circle" data-dots="100" data-percent="82"></div>
                         <div class="text">
                             <big>82%</big>
-                            <small>Growth Mindset</small>
+                            <small>Entrepreneurship</small>
                         </div>
                     </div>
 
@@ -507,7 +507,7 @@
                         <div class="circle" data-dots="100" data-percent="78"></div>
                         <div class="text">
                             <big>78%</big>
-                            <small>Independency</small>
+                            <small>Business Acumen</small>
                         </div>
                     </div>
 
@@ -515,7 +515,7 @@
                         <div class="circle" data-dots="100" data-percent="74"></div>
                         <div class="text">
                             <big>74%</big>
-                            <small>Work Ethic</small>
+                            <small>Professional Networking</small>
                         </div>
                     </div>
 
@@ -523,7 +523,7 @@
                         <div class="circle" data-dots="100" data-percent="70"></div>
                         <div class="text">
                             <big>70%</big>
-                            <small>Team Work</small>
+                            <small>Project Management</small>
                         </div>
                     </div>
                 </div>
