--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 
     <section id="portfolio" class="portfolio">
         <div class="main-text scroll-scale">
-            <span>What I have done for clients</span>
+            <span>What our Cyber Clinic have done for clients, here are some of the few</span>
             <h2>Latest Project</h2>
         </div>
 
@@ -693,6 +693,7 @@ CyberBiz Clinic has always been providing clients / customers robust and safe ne
     <!--footer website------------------------------------------------------------------------------------->
     <footer>
         <p class="scroll-scale">Copyright & Copy; 2023 by <span>CyberBiz</span> Clinic || All Rights Reserved</p>
+	<p class="scroll-scale">Developed and Designed by <span>Sulaiman Ndamisa</span></p>    	    
         <a href="#home"><i class='bx bx-up-arrow-alt bx-tada' ></i></a>
     </footer>
     <script src="mixitup.min.js"></script>
