--- a/index.html
+++ b/index.html
@@ -674,8 +674,8 @@ CyberBiz Clinic has always been providing clients / customers robust and safe ne
     <section id="contact" class="contact">     
         <form action="https://api.web3forms.com/submit" method="POST" class="scroll-bottom">
 	    <div class="main-text scroll-scale">
-            <span>Ask me questions</span>
-            <h2>Contact Me</h2>
+            <span>Ask us questions</span>
+            <h2>Get in touch with us.</h2>
             </div>
             <input type="hidden" name="access_key" value="89861e75-eae2-4db2-89bd-58b37effb22b">
             <input type="hidden" name="recipient_email" value="sndamisa23@gmail.com;cyberbizclinic@gmail.com;blackndamisa@gmail.com">
