--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>CyberBiz career Portfolio || Sulaiman Ndamisa Website</title>
+        <title>CyberBiz Clinic's Official Portal Website || Design: Sulaiman Ndamisa(C.E.O)</title>
 	<link href="favicon.png" rel="icon">
   	<link href="apple-touch-icon.png" rel="apple-touch-icon">    
         <meta name='viewport' content='width=device-width, initial-scale=1.0'>
