--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
             <img src="CBC-Logo.png" alt="CyberBiz Clinic Logo" id="logo">
             <ul class="navlist">
                 <li><a href="#home" style="--i:1;">Home</a></li>
-                <li><a href="#about" style="--i:2;">About</a></li>
-                <li><a href="#services" style="--i:3;">Services</a></li>
-                <li><a href="#skills" style="--i:4;">Skills</a></li>
-                <li><a href="#portfolio" style="--i:5;">Portfolio</a></li>
-                <li><a href="#contact" style="--i:6;">Contact</a></li>
+                <li><a href="#about" style="--i:2;">About Us</a></li>
+                <li><a href="#services" style="--i:3;">Units / Services</a></li>
+                <li><a href="#portfolio" style="--i:5;">Projects and Impact</a></li>
+		<li><a href="#skills" style="--i:4;">Partnerships</a></li>    
+                <li><a href="#contact" style="--i:6;">News and Blog</a></li>
+		<li><a href="#contact" style="--i:6;">Contact Us</a></li>
+		<li><a href="#contact" style="--i:6;">Get Involved / Join Us</a></li>
             </ul>
             <div id="menu-icon" class="bx bx-menu"></div>
         </header>
