--- a/index.html
+++ b/index.html
@@ -29,18 +29,15 @@
 
         <section id="home" class="home">
             <div class="home-content scroll-scale">
-                <h1>Welcome to CyberBiz Clinic</h1>
+                <h2>Welcome to CyberBiz Clinic</h2>
                 <div class="change-text">
-                    <h3>We offer </h3>
+                    <h3>Our units and services</h3>
                     <h3>
-                        <span class="word">Cybersecurity&nbspAssessments</span>
-                        <span class="word">Network-Security&nbspSolutions</span>
-                        <span class="word">Mobile-Security&nbspSolutions</span>
-                        <span class="word">E-commerce&nbspOptimization</span>
-                        <span class="word">Website&nbspDevelopment</span>
-			<span class="word">Project&nbspManagement</span>  
-			<span class="word">Business&nbspConsulting</span>
-			<span class="word">Cybersecurity&nbspTraining</span>    
+                        <span class="word">EmpHub&nbspUnit</span>
+                        <span class="word">DigCizen&nbspUnit</span>
+                        <span class="word">SaniTech&nbspUnits</span>
+                        <span class="word">Sierra&nbspIntelligence&nbspAgency</span>
+                        <span class="word">AccessEcom&nbspUnit</span>  
                     </h3>
                 </div>
         
