--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="home-content scroll-scale">
                 <h1>Welcome to CyberBiz Clinic</h1>
                 <div class="change-text">
-                    <h3>Our units</h3>
+                    <h3>Our units:</h3>
                     <h3>
                         <span class="word">EmpHub&nbspUnit</span>
                         <span class="word">DigCizen&nbspUnit</span>
