--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         
             <div class="home-image scroll-scale">
                 <div class="img-box">
-                    <img src="Homepage.png" alt="Sulaiman Ndamisa">
+                    <img src="Homepage.jpeg" alt="Sulaiman Ndamisa">
                 </div>
         
                 <div class="liquid-shape">
