--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<li><a href="#skills" style="--i:4;">Partnerships</a></li>    
                 <li><a href="#contact" style="--i:6;">News</a></li>
 		<li><a href="#contact" style="--i:6;">Contact Us</a></li>
-		<li><a href="#contact" style="--i:6;">Get Involved / Join Us</a></li>
+		<li><a href="#contact" style="--i:6;">Get Involved</a></li>
             </ul>
             <div id="menu-icon" class="bx bx-menu"></div>
         </header>
